<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bioscope</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_qrcode">QRCodeActivity</string>
    <string name="title_activity_connection_establishment_nfc">ConnectionEstablishmentNFCActivity</string>
    <string name="title_activity_connection_receive_nfc">ConnectionReceiveNFCActivity</string>
    <string name="title_activity_receive_connection_info">ReceiveConnectionInfoActivity</string>
    <string name="connecting_message">Connecting..</string>
    <string name="connected_message">Connected</string>
    <string name="nfc_instructions_message">Tap the other device using NFC </string>
    <string name="title_activity_connection_established">ConnectionEstablishedActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="mime_type_nfc_connect_wifi">application/com.trioscope.chameleon.connect.wifi</string>
    <string name="title_activity_preview_merge">PreviewMergeActivity</string>
    <string name="share_via">Share via</string>
    <string name="ok">OK</string>
    <string name="openh_disabled_warn_title">OpenH264 Disabled</string>
    <string name="openh_disabled_warn">OpenH264 is disabled, so you can not merge videos. Directing is disabled, but you can still collaborate with someone who can! </string>

    <string name="menu_settings">Settings</string>


    <!-- Preferences -->
    <string name="stream_preferences">Streaming</string>

    <string name="pref_stream_resolution">StreamResolution</string>
    <string name="pref_stream_resolution_summary">Resolution sent across the stream</string>
    <string name="pref_stream_resolution_title">Stream Resolution</string>

    <string name="user_preferences">User Details</string>

    <string name="pref_user_name_key">UserName</string>
    <string name="pref_user_name_summary">Enter Name</string>
    <string name="pref_user_name_title">Username</string>
    <string name="pref_codec_key">UseOpenH</string>
    <string name="pref_res_key">PreferredVideoResolution</string>
    <string name="pref_codec_title">More Information</string>
    <string name="title_activity_user_login">UserLoginActivity</string>
    <string name="title_activity_video_library">VideoLibraryActivity</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="pref_ga_display_features_key">UseGADisplayFeatures</string>
    <string name="title_activity_termsofservice">TermsofserviceActivity</string>
    <string name="title_activity_termsofuse">TermsofuseActivity</string>
    <string name="title_activity_licenses">LicensesActivity</string>
    <string name="pref_version_number_key">VersionNumber</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_tutorial_one">TutorialOneActivity</string>
    <string name="title_activity_tutorial_two">TutorialTwoActivity</string>
    <string name="title_activity_tutorial_three">TutorialThreeActivity</string>
    <string name="title_activity_tutorial_four">TutorialFourActivity</string>
    <string name="title_activity_tutorial_five">TutorialFiveActivity</string>
    <string name="title_activity_custom_preview">CustomPreviewActivity</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="pref_res_default">1280x720</string>
    <string name="pref_res_low">768x432</string>
</resources>
