<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:summary="Preferences for the Bioscope App"
    android:title="Preferences"
    >

    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="@string/pref_user_name_title">
        <EditTextPreference
            android:defaultValue=""
            android:dialogMessage="@string/pref_user_name_summary"
            android:dialogTitle="@string/pref_user_name_title"
            android:key="@string/pref_user_name_key"
            android:layout="@layout/edit_text_preference_with_icon"
            android:persistent="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="@string/pref_codec_title">
        <SwitchPreference
            android:key="@string/pref_codec_key"
            android:title="OpenH264 Codec"
            android:defaultValue="true"
            android:checked="true" />
        <SwitchPreference
            android:key="@string/pref_ga_display_features_key"
            android:title="Google Analytics Display Features"
            android:defaultValue="true"
            android:checked="true" />
        <Preference android:title="Terms of use" >
            <intent android:targetPackage="com.trioscope.chameleon"
                android:targetClass="com.trioscope.chameleon.activity.TermsofuseActivity" />
        </Preference>
        <Preference android:title="About" >
            <intent android:targetPackage="com.trioscope.chameleon"
                android:targetClass="com.trioscope.chameleon.activity.AboutActivity" />
        </Preference>
        <Preference android:title="Contact Us" >
            <intent android:targetPackage="com.trioscope.chameleon"
                android:targetClass="com.trioscope.chameleon.activity.FeedbackActivity" />
        </Preference>
        <Preference
            android:defaultValue=""
            android:key="@string/pref_version_number_key"
            android:title="Version Number"
            />
    </PreferenceCategory>

</PreferenceScreen>